--- a/index.css
+++ b/index.css
@@ -10,22 +10,22 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
+    width: 100%;
 }
 
 #hero-text{
-    width: 201px;
-    height: 34px;
+    width: 16%;
     background-color: #1D3557;
     border-radius: 10px;
-    padding: 3px 12px 5px 12px;
+    padding: 2px 12px;
     margin-top: 122px;
 }
 
 #hero-text2{
-    width: 350px;
+    width: 27%;
     background-color: #457B9D;
     border-radius: 10px;
-    padding: 5px 29px 8px 29px;
+    padding: 0.5% 2.4%;
     margin-top: 20px;
     margin-bottom: 100px;
 }
@@ -38,54 +38,32 @@ body{
 .activities{
     display: flex;
     justify-content: space-evenly;
-    margin: 80px 0px 40px 0px;
+    margin: 5% 2%;
     color: #1D3557;
     text-shadow: 0px 0px 4px #ffffff;
 }
 
 #mid-title{
-    width: 440px;
+    width: 23%;
     margin: 40px auto 0px auto;
     color: #1D3557;
     text-shadow: 0px 0px 4px #ffffff;
 }
 
-.parthenon{
+.location{
     text-align: center;
-    width: 180px;
+    width: 14.4%;
 }
 
-#parthenon-img{
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-}
-
-.beach{
-    text-align: center;
-    width: 180px;
-}
-
-#beach-img{
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-}
-
-.plaka{
-    text-align: center;
-    width: 180px;
-}
-
-#plaka-img{
-    width: 150px;
-    height: 150px;
+.location-img{
+    width: 83%;
+    height: 60%;
     border-radius: 100%;
 }
 
 .guide-section{
     background-color: #A8DADC;
-    width: 400px;
+    width: 35%;
     display: flex;
     justify-content: space-around;
     margin: 50px auto 50px auto;
@@ -96,7 +74,7 @@ body{
 }
 
 #avatar{
-    width: 150px;
+    width: 31%;
 }
 
 #quote{
