--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ body{
 
 #hero-text{
     width: 16%;
+    min-width: 180px;
     background-color: #1D3557;
     border-radius: 10px;
     padding: 2px 12px;
@@ -23,6 +24,7 @@ body{
 
 #hero-text2{
     width: 27%;
+    min-width: 300px;
     background-color: #457B9D;
     border-radius: 10px;
     padding: 0.5% 2.4%;
@@ -45,6 +47,7 @@ body{
 
 #mid-title{
     width: 23%;
+    min-width: 400px;
     margin: 40px auto 0px auto;
     color: #1D3557;
     text-shadow: 0px 0px 4px #ffffff;
@@ -53,17 +56,21 @@ body{
 .location{
     text-align: center;
     width: 14.4%;
+    min-width: 150px;
 }
 
 .location-img{
     width: 83%;
     height: 60%;
+    min-width: 120px;
+    min-height: 120px;
     border-radius: 100%;
 }
 
 .guide-section{
     background-color: #A8DADC;
     width: 35%;
+    min-width: 300px;
     display: flex;
     justify-content: space-around;
     margin: 50px auto 50px auto;
@@ -75,6 +82,7 @@ body{
 
 #avatar{
     width: 31%;
+    min-width: 100px;
 }
 
 #quote{
